# ocamlspot

./: .depend  .hgignore  .merlin  Changes  Makefile  README.md  README.rst  checksum.ml  cmt.ml  cmt.mli  command.ml  command.mli  compdir.ml  compdir.mli  copiedfilename.ml  dir.ml  dot_merlin.ml  dotfile.ml  dotfile.mli  ext.ml  fileident.ml  fileident.mli  filepath.ml  filepath.mli  jbuild  locident.ml  locident.mli  name.ml  name.mli  ocamlspot.el  ocamlspot.ml  ocamlspot.opam  ocamlspot.sh  pathmap.ml  pathreparse.ml  pathreparse.mli  search_cmt.ml  spot.ml  spot.mli  spotconfig.ml  (+30 more)
opam/: opam
opam/ocamlspot.4.00.0.2.0.1/: opam  url
opam/ocamlspot.4.00.0.2.1.0/: url
opam/ocamlspot.4.00.0.2.1.1/: url
opam/ocamlspot.4.00.1.2.1.2/: url
opam/ocamlspot.4.00.1.2.1.4/: url
opam/ocamlspot.4.01.0.2.2.0/: url
opam/ocamlspot.4.01.0.2.2.1/: url
opam/template/: opam
tests/: .depend  Makefile  Makefile.targets  auto-test.pl  camlp4_path.ml  capital_idents.ml  class2.mli  hogekura.ml  included_const.ml  included_const2.ml  inherit.ml  lex.ml  lex.mll  module_type_alias.ml  object.ml  random_performance.pl  test001.ml  test002.ml  test003_include.ml  test13.ml  test18.ml
tests/dot_ocamlspot/: Makefile
tests/ocamlbuild/: Makefile
tests/ocamlbuild/dir/dir2/: bye.ml
tools/: COPY  THIS_INSTALLATION_SCRIPT_MUST_FAIL.sh  putcopy
