opam-version: "1.2"
version: "4.06.0.2.3.2"
maintainer: "jun.furuse@gmail.com"
authors: "Jun Furuse"
homepage: "https://bitbucket.org/camlspotter/ocamlspot/"
bug-reports:
  "https://bitbucket.org/camlspotter/ocamlspot/issues?status=new&status=open"
dev-repo: "https://bitbucket.org/camlspotter/ocamlspot"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
]
available: [ocaml-version >= "4.06.0" & ocaml-version < "4.07.0"]
